Helm_TodoAppMicro_Services/TodoApplicationUI/Maniest-Files_old/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoappui
spec:
  type: ClusterIP
  selector:
    app: todoappui
  ports:
  - port: 80
    targetPort: 80
