Helm_TodoAppMicro_Services/TodoApplicationUI/Maniest-Files_old/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoappui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: todoappui
  
spec:
  ingressClassName: nginx
  rules:
  - host: todoapp.raghavcorporation.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoappui
            port: 
              number: 80
